// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render left slot correctly 1`] = `
<div class="mi-nav-bar__left mi-haptics-feedback">
  Custom Left
</div>
`;

exports[`should render left slot correctly 2`] = `
<div class="mi-nav-bar__right mi-haptics-feedback">
  Custom Right
</div>
`;

exports[`should render placeholder element when using placeholder prop 1`] = `
<div
  class="mi-nav-bar__placeholder"
  style="height: 50px;"
>
  <div class="mi-nav-bar mi-nav-bar--fixed mi-hairline--bottom">
    <div class="mi-nav-bar__content">
      <div class="mi-nav-bar__title mi-ellipsis">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render slots correctly when set clickable to false 1`] = `
<div class="mi-nav-bar__left">
  Custom Left
</div>
`;

exports[`should render slots correctly when set clickable to false 2`] = `
<div class="mi-nav-bar__right">
  Custom Right
</div>
`;

exports[`should render title slot correctly 1`] = `
<div class="mi-nav-bar__title mi-ellipsis">
  Custom Title
</div>
`;
